--- a/metis.html
+++ b/metis.html
@@ -22,7 +22,7 @@
     
                         <li>
                             <div class = "imagemS" href="/">
-                                <img src="https://cdn-icons-png.flaticon.com/512/3429/3429924.png">
+                                <img src="https://cdn-icons-png.flaticon.com/512/60/60510.png">
                                 <a href="/"> </a>
                             </div>
                         </li>
