--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
     </nav>
 
 
-
+<main>
 <body>
     <p>
         Faça login para validarmos sua denuncia
@@ -39,12 +39,13 @@
         <input type="text" name="usuario2" placeholder="   Senha">
         <br><br>
         <button class id = "entrar"> Entrar </button>
-        
 
     </div>
    <img src="./emergencia.svg" alt="emergencia">
-
-   
+</main>
+<footer>
+    <a id = "footer" href = "./registrar.html"> Registre-se</a> 
+</footer>
 
 </body>
 </html>
