--- a/login.html
+++ b/login.html
@@ -44,8 +44,8 @@
    <img src="./emergencia.svg" alt="emergencia">
 </main>
 <footer>
-    <a id = "footer" href = "./registrar.html"> Registre-se</a> 
+    <a  id = "footer" href = "./registrar.html"> &nbsp;Registre-se</a> 
 </footer>
-
+    <a class="nt1" id = "NãoTem">Não tem cadastro? </a>
 </body>
 </html>
