--- a/registrar.html
+++ b/registrar.html
@@ -30,30 +30,34 @@
 
     <main>
         <div class = "tela">
-            <p>
-                Escolha seu Nome de Usuario
+            <p class="pnome" id = "meupnome">
+                Escolha seu nome de usuario
             </p>
 
             <br>
-            <input type="text" name="usuario1" placeholder="  Nome de usuario ">
+            <input class = "usuario" id = "inpusuario"
+            type="text" name="usuario1" placeholder="  Nome de usuario ">
             <br><br>  
 
-            <p> Digite um e-mail valido</p>
+            <p class="pemail" id = "meupemail"> Digite um e-mail valido</p>
             <br><br>
 
-            <input type="text" name="email1" placeholder=" E-mail">
+            <input class = "email" id = "inpemail" 
+            type="text" name="email1" placeholder=" E-mail">
             <br><br>
 
-            <p> Digite sua senha</p>
+            <p class="psenha" id = "meupsenha"> Digite sua senha</p>
             <br><br>
 
-            <input type="text" name="senha1" placeholder=" Senha">
+            <input class = "senha" id = "inpsenha" 
+             type="text" name="senha1" placeholder=" Senha">
             <br><br>
 
-            <p> Repita sua senha</p>
+            <p class="pconf" id = "meupconf"> Repita sua senha</p>
             <br><br>
         
-            <input type="text" name="senha2" placeholder=" Repita sua senha">
+            <input class = "confirmar" id = "inpconfirmar" 
+             type="text" name="senha2" placeholder=" Repita sua senha">
             <br><br>
             <button class id = "entrar"> Registrar </button>
     
