--- a/denuncie.html
+++ b/denuncie.html
@@ -23,20 +23,21 @@
     </nav>
 </header>
 <body>
-    <section class = "formulario">
-        <div>
-            <h1>Digite o estado e cidade em que aconteceu:</h1>
+    <main>
+        <section class = "formulario">
+            <div>
+                <h1>Digite o estado e cidade em que aconteceu:</h1>
+                    <br>
+                <input type = "text" name = "cidade" id="input1"placeholder="Ex: São Paulo, Diadema.">
+                    <br><br>
+                <p>Diga o que houve nesta área abaixo:</p>
+                    <br>
+                <textarea name="areadenuncia" id="" cols="50" rows="15" placeholder=" Digite aqui" maxlength="400" minlength="5"></textarea>
                 <br>
-            <input type = "text" name = "cidade" id="input1"placeholder="Ex: São Paulo, Diadema.">
-                <br><br>
-            <p>Diga o que houve nesta área abaixo:</p>
-                <br>
-            <textarea name="areadenuncia" id="" cols="50" rows="15" placeholder=" Digite aqui" maxlength="400" minlength="5"></textarea>
-            <br>
-            <input type="submit" name="enviar" id="input2" value="Enviar Denuncia">
-        </div>
-    </section>  
-
+                <input type="submit" name="enviar" id="input2" value="Enviar Denuncia">
+            </div>
+        </section>  
+    </main>
 
     
 </body>
