--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
 
 <main>
 <body>
+    <img src="./login.svg" class = "imglogin" alt="loginimg"> 
     <p>
         Faça login para validarmos sua denuncia
         <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Colabore com nossa comunidade!
