--- a/denuncie.html
+++ b/denuncie.html
@@ -32,7 +32,7 @@
                     <br><br>
                 <p>Diga o que houve nesta área abaixo:</p>
                     <br>
-                <textarea name="areadenuncia" id="" cols="50" rows="15" placeholder=" Digite aqui" maxlength="400" minlength="5"></textarea>
+                <textarea name="areadenuncia" id="" cols="50" rows="15" placeholder="" maxlength="400" minlength="5"></textarea>
                 <br>
                 <input type="submit" name="enviar" id="input2" value="Enviar Denuncia">
             </div>
