--- a/metis.html
+++ b/metis.html
@@ -18,12 +18,12 @@
                         <li>
                             <div class = "imagemF">
                             <img src="https://cdn-icons-png.flaticon.com/512/5463/5463457.png">
-                            <a href="/"> </a>
+                            <a href="#"> </a>
                             </div>
                         </li>
     
                         <li>
-                            <div class = "imagemS" href="/">
+                            <div class = "imagemS" >
                                 <img src="https://cdn-icons-png.flaticon.com/512/60/60510.png">
                                 <a href="/"> </a>
                             </div>
@@ -60,11 +60,7 @@
                 Métis 
             </p>
         </div>
-        <!-- <div class= "textomain">
-            <p>
-                Se sente com falta de segurança em seu próprio bairro e está procurando uma solução para seu problema? Relaxe, nós estamos aqui!
-            </p>
-        </div> -->
+     
     </main>
 <body>
  
