--- a/sobrenos.html
+++ b/sobrenos.html
@@ -27,7 +27,7 @@
 </header>
 <body>
     <main></main>
-        <img class = "programadorImg" src="./program.svg" alt="programador">
+        <img class = "programadorImg" src="./imgs/program.svg" alt="programador">
         <h1><span>Q</span>uem somos nós?</h1>
 
         <p><a class = "text2">Se sente com falta de segurança em seu próprio bairro e está procurando uma solução para seu problema? Relaxe, nós estamos aqui!</a></p>
