Mudanças Nas Paginas

--- a/suporte.html
+++ b/suporte.html
@@ -8,14 +8,14 @@
     <title>Suporte</title>
 </head>
 <body>
-<div class = "container">
+
 <header>
     <nav>
-        <a class="logo" href="./metis.html"> ← </a>
+        <a class="logo" href="./metis.html" > Métis </a>
         <div class="images" href="/">
             <ul class = "nav-list">
                 <li>
-                    <div class = "seta" ←>
+                    <div class = "seta" >
                         <a href=""> </a>
                     </div>
                 </li>
@@ -23,35 +23,60 @@
         </div>
     </nav>
 </header>
-
 <main>
-
-   
-        <button class="pinture1">
-            <img src="./apoio-suporte.png" alt="imgSup_sup">
-            <h1>Suporte Técnico</h1>
-            <br><br>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ajudas sobre: <br>Sistema, Denuncias e Problemas técnicos em geral</p>
-        </button>
-        
+<div>
+    <div id = "cont_sup">
+        <div class="figura1">
+            <button>
+                <img src="./imgs/apoio-suporte.png" alt="imgSup_sup">
+                <h1>Suporte Técnico</h1>
+                <br><br>
+                <a>Ajudas sobre: <br>Sistema, Denuncias e Problemas técnicos em geral</a>
+            </button>
         </div>
-  
 
-  
-        <button class = "pinture2">
-            <img src="./friends.png" alt="imgSup_sup">
-            <h1>Suporte Assistencial</h1>
-            <br><br>
-            <p>Ajudas sobre: <br>Conta, Login e Problemas dentro do site em geral</p> 
-        </button>
-   
-
-    <img src="./imgs/suporte.svg" class = "imgSuporte" alt="supimg"> 
-  
-  
-</main>
-
-<footer></footer>
+        <div class = "figura2">
+            <button>
+                <img src="./imgs/friends.png" alt="imgSup_sup">
+                <h1>Fórum Da Comunidade</h1>
+                <br>
+                <a>Ajudas sobre: <br>Conta, Login e Problemas dentro do site em geral</a> 
+            </button>
+        </div>
+    </div>
 </div>
+</main>
+<footer id = footer>   
+    <ul id="foot-content">
+        <li>
+            <div class = "tituloSobre" >
+                <a href="./sobrenos.html"> Sobre nós </a>
+            </div>  
+        </li>
+        <div id = foot-images>
+        <li>
+                <a href="https://www.instagram.com/metisecure/" target="blank"> 
+                <img class = "iconeInstagram" src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png">
+                </a>
+        </li>
+        <li>
+                <a href="#"> 
+                <img class = "iconeFacebook" src="https://cdn-icons-png.flaticon.com/512/20/20837.png">
+                </a>
+        </li>
+        <li>                     
+                <a href="./suporte.html"> 
+                <img class = "iconeSuporte" src=" https://cdn-icons-png.flaticon.com/512/7145/7145656.png" target="blank">
+                </a>                      
+        </li>
+        </div>
+        <li>
+            <div class = "tituloCeap" >
+                <a href="https://ceappedreira.org.br/" target="_blank"> CEAP </a>
+            </div>  
+        </li>
+    </ul>
+
+</footer>
 </body>
 </html>
