--- a/denuncie.html
+++ b/denuncie.html
@@ -7,38 +7,34 @@
     <title>Denuncie Aqui</title>
     <link rel="stylesheet" href="./styles/denuncie.css">
 </head>
-<header>
-    <nav>
-        <a class="logo" href="./metis.html"> ← </a>
-
-           <div class="images" href="/">
-                <ul class = "nav-list">
-                    <li>
-                        <div class = "seta" >
-                        <a href=""> </a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-    </nav>
-</header>
 <body>
-    <main>
-        <section class = "formulario">
-            <div>
-                <h1>Digite o estado e cidade em que aconteceu:</h1>
-                    <br>
-                <input type = "text" name = "cidade" id="input1"placeholder="Ex: São Paulo, Diadema.">
-                    <br><br>
-                <p>Diga o que houve nesta área abaixo:</p>
-                    <br>
-                <textarea name="areadenuncia" id="" cols="50" rows="15" placeholder="" maxlength="400" minlength="5"></textarea>
-                <br>
-                <input type="submit" name="enviar" id="input2" value="Enviar Denuncia">
-            </div>
-        </section>  
-    </main>
+    <header>
+        <nav>
+            <a class="logo" href="./metis.html"> Métis </a>
 
-    
+            <div class="images" href="/">
+                    <ul class = "nav-list">
+                        <li>
+                            <div class = "seta" >
+                            <a href=""> </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+        </nav>
+    </header>
+    <div id = "container">
+        <main>
+            <form>
+                <div>
+                    <label>Digite o estado, cidade e bairro em que aconteceu:</label>
+                        <br><br>
+                    <input type = "text" name = "cidade" id="input1"placeholder="Ex: São Paulo, Diadema, Campanario.">  
+                    <input type="submit" value="➞"> 
+                </div>
+            </form>  
+        </main>
+    </div>
+<footer></footer>
 </body>
 </html>
