--- a/denuncie.html
+++ b/denuncie.html
@@ -29,8 +29,8 @@
                 <div>
                     <label>Digite o estado, cidade e bairro em que aconteceu:</label>
                         <br><br>
-                    <input type = "text" name = "cidade" id="input1"placeholder="Ex: São Paulo, Diadema, Campanario.">  
-                    <input type="submit" value="➞"> 
+                    <input type = "text" name = "cidade" id="input1"placeholder=" Ex: São Paulo, Diadema, Campanario.">  
+                    <input type="submit" value="Continuar"> 
                 </div>
             </form>  
         </main>
