--- a/metis.html
+++ b/metis.html
@@ -15,18 +15,6 @@
         <nav id = "nav-site">      
             <a class="logo" href="./metis.html">Métis</a>
                     <ul class = "nav-list">
-                        <li>                       
-                            <div class = "imagemS">
-                            <img src="https://cdn-icons-png.flaticon.com/512/5463/5463457.png">
-                            <a href="#"> </a>
-                            </div>
-                        </li>       
-                        <li>
-                            <div class = "imagemH" >
-                                <img src="https://cdn-icons-png.flaticon.com/512/60/60510.png">
-                                <a href="/"> </a>
-                            </div>
-                        </li>
                         <li>
                             <div class = "tituloRegistro">
                             <a href="./registrar.html">Registrar </a>
@@ -64,11 +52,11 @@
         <div id = "panel_sec">
             <div class = "text_panel">
                 Faça sua denuncia, aqui nós mostramos a localização da sua denuncia e de outras garantindo uma maior segurança para você   
-                <a href="./denuncie.html">
+                <a id = "btnDenuncia"href="./denuncie.html">
                     <button>Denuncie já →</button>
                 </a>             
             </div>
-            <div>
+            <div id = "div_img">
                 <img class = "imagem_fundo2" src="./imgs/imagem_fundo2.svg" alt="imagem_fundo2">              
             </div>
         </div>
