--- a/registrar.html
+++ b/registrar.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="./metis.html"> ← </a>
+            <a class="logo" href="./metis.html"> métis </a>
                    <div class="images" href="/">
                         <ul class = "nav-list">
                             <li>
@@ -25,8 +25,9 @@
     </header>
 <div id = "container">
     <div id = "parte_esquerda">
-        <img id = "imgRegistro"src="./imgs/imgRegistro.svg" alt="imgRegistro">
+        
     </div>
+
 
     <main>
         <div class = "tela">
