--- a/sobrenos.html
+++ b/sobrenos.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <nav id = "navbar">
-        <a class="logo" href="./metis.html"> ← </a>
+        <a class="logo" href="./metis.html"> métis </a>
            <div class="images" href="/">
                 <ul class = "nav-list">
                     <li>
@@ -26,7 +26,7 @@
 <div id = "container">
 <body>
     <main>
-            <img class = "logoMetis" src="./imgs/logoMetis.png" alt="logoMetis">
+            <img id = "logoMetis" src="./imgs/logoMetis.png" alt="logoMetis">
         <div id = "content">
             <h1><span>Q</span>uem somos nós?</h1>
     </main>
