--- a/denuncie.html
+++ b/denuncie.html
@@ -27,8 +27,8 @@
         <main>
             <form>
                 <div>
-                    <label>Digite o estado, cidade e bairro em que aconteceu:</label>
-                        <br><br>
+                    <label>Digite o estado, cidade e bairro em que aconteceu</label>
+                        <br><br><br>
                     <input type = "text" name = "cidade" id="input1"placeholder=" Ex: São Paulo, Diadema, Campanario.">  
                     <input type="submit" value="Continuar"> 
                 </div>
