--- a/sobrenos.html
+++ b/sobrenos.html
@@ -40,9 +40,11 @@
         <img id = "gif_PR"src="./imgs/program.svg" alt="programador_tela">
         <h3 class = "colaborar">  E como você pode colaborar conosco? </h3> 
         <br><br><br><br>
-        <a class = "text3"> De varias formas! Como, dizer qual lugar é o mais perigoso em seu bairro pelo nosso mapa, ou até mesmo nos ajudando financeiramente pelo nosso sistema de suporte, toda ajuda é valida!</a>
-        <br><br>
-        <a class = "footer_text">Estamos Trabalhando Por Você!</a>
+        <div class = "parte3">
+            <a id = "text3"> De varias formas! Como, dizer qual lugar é o mais perigoso em seu bairro pelo nosso mapa, ou até mesmo nos ajudando financeiramente pelo nosso sistema de suporte, toda ajuda é valida!</a>
+            <br><br>
+            <a class = "footer_text">Estamos Trabalhando Por Você!</a>
+        </div>
     </div>
 
     <div class = "bloco2">
