--- a/metis.html
+++ b/metis.html
@@ -7,14 +7,25 @@
     <link rel="stylesheet" href="./styles/metis.css">
     <link href="https://fonts.googleapis.com/css2?family=Kufam:wght@400;600;900&display=swap" rel="stylesheet">
     <script src="./server.js"></script>
-    <title>Métis - Nós faremos a sua segurança</title>
+    <title>The Way - Estude do seu jeito!</title>
 <head>
 <body>  
     <div class = "container"></div>
     <header>
         <nav id = "nav-site">      
-            <a class="logo" href="./metis.html">Métis</a>
+            <a class="logo" href="./metis.html">The Way</a>
                     <ul class = "nav-list">
+                        <li>
+                            <div class = "tituloAreaAluno">
+                            <a href="./registrar.html">Área do estudante </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class = "tituloLogin">
+                            <a href="./login.html">Login </a>
+                            </div>
+                        </li>
+                        <li>
                         <li>
                             <div class = "tituloRegistro">
                             <a href="./registrar.html">Registrar </a>
@@ -36,11 +47,11 @@
     <main id="content">
         <div>
             <h1 class = textoMain>
-                Segurança em seu bairro não está das melhores? Sabemos disso.
+                Descubra a melhor forma de aprender, conheça a TheWay
             </h1>
             <br>
             <p class = "legendaMain">
-                Métis, está aqui para te informar, e ajudar :)
+                Uma plataforma de estudos digitais, que se adapta ao usuário!
             </p>          
         </div>
     </main>
@@ -51,16 +62,29 @@
     <section>
         <div id = "panel_sec">
             <div class = "text_panel">
-                Faça sua denuncia, aqui nós mostramos a localização da sua denuncia e de outras garantindo uma maior segurança para você   
+                O melhor método para estudar? 
+                <br> 
+                Deixe nós descobrirmos para você, 
+                <br>
+                faça o teste de aprendizado!  
                 <a id = "btnDenuncia"href="./denuncie.html">
-                    <button>Denuncie já →</button>
+                <br>
+                <br>
+                    <button id="btn1">Meu método</button>
                 </a>             
-            </div>
-            <div id = "div_img">
-                <img class = "imagem_fundo2" src="./imgs/imagem_fundo2.svg" alt="imagem_fundo2">              
-            </div>
+            </div> 
+            <div id = "opcPainel"> 
+                    <div id = "botao1">
+                        <button id="btn2"><p id="pBt2">Deseja ser uma escola parceira? <br> Fale conosco </p></button>                             
+                    </div>
+                    <div id = "botao2">
+                        <button id="btn3"><p id = "pBt3" >Seja um professor independente e <br> divulgue seus conteúdos aqui </p></button>                                
+                    </div>   
+            </div> 
         </div>
     </section>
+
+    
 
 
 
@@ -90,7 +114,7 @@
                     </div>
                     <li>
                         <div class = "tituloCeap" >
-                            <a href="https://ceappedreira.org.br/" target="_blank"> CEAP </a>
+                            <a href="./suporte.html" target="_blank"> Suporte </a>
                         </div>  
                     </li>
                 </ul>
