--- a/registrar.html
+++ b/registrar.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="./metis.html"> métis </a>
+            <a class="logo" href="./metis.html"> The Way </a>
                    <div class="images" href="/">
                         <ul class = "nav-list">
                             <li>
@@ -23,21 +23,15 @@
                     </div>
         </nav>
     </header>
-<div id = "container">
-    <div id = "parte_esquerda">
-        
-    </div>
-
-
+<div id = "container"> 
     <main>
         <div class = "tela">
-                <form id ="form1"action="">
-                        <br><br><br>
+                <form id ="form1"action=""> 
                         <input type="text" placeholder = "Nome" id="lbname" name="fname"><br><br>
                         <input type="text" placeholder = "E-mail"id="lbemail" name="email"><br><br>
                         <input type="number" placeholder = "CPF"  max="9" id="lbCPF" name="cpf"><br><br>
                         <input type="date" placeholder = "dd/mm/aa" id="lbddn" name="ddn"><br><br>
-                        <input type="text" placeholder = "Username" id="lbuser" name="username"><br><br>
+                        <input type="text" placeholder = "Apelido" id="lbuser" name="username"><br><br>
                         <input type="password" placeholder = "Senha" id="lbsenha" name="fname"><br><br>
                         <input type="password" placeholder = "Confirme sua senha" id="fname" name="fname"><br><br>                                   
                         <input class = "btEnviar" type="submit" value="Cadastrar">
