--- a/sobrenos.html
+++ b/sobrenos.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <nav id = "navbar">
-        <a class="logo" href="./metis.html"> métis </a>
+        <a class="logo" href="./metis.html"> The Way </a>
            <div class="images" href="/">
                 <ul class = "nav-list">
                     <li>
@@ -26,7 +26,7 @@
 <div id = "container">
 <body>
     <main>
-            <img id = "logoMetis" src="./imgs/logoMetis.png" alt="logoMetis">
+        <img id = "logoMetis" src="" alt="logo">  
         <div id = "content">
             <h1><span>Q</span>uem somos nós?</h1>
     </main>
@@ -36,19 +36,21 @@
     
     <div class = "bloco1">
         <br><br><br>
-        <a class = "text1">Se sente com falta de segurança em seu próprio bairro e está procurando uma solução para seu problema? Relaxe, nós estamos aqui!</a>   
+        <a class = "text1">Na The Way, acreditamos que cada estudante é único e merece uma abordagem personalizada para alcançar seu máximo potencial.</a>   
         <img id = "gif_PR"src="./imgs/program.svg" alt="programador_tela">
-        <h3 class = "colaborar">  E como você pode colaborar conosco? </h3> 
+        <h3 class = "colaborar">  Qual o nosso objetivo? </h3> 
         <br><br><br><br>
         <div class = "parte3">
-            <a id = "text3"> De varias formas! Como, dizer qual lugar é o mais perigoso em seu bairro pelo nosso mapa, ou até mesmo nos ajudando financeiramente pelo nosso sistema de suporte, toda ajuda é valida!</a>
+            <a id = "text3"> Nosso objetivo é transformar dados em estratégias, oferecendo recomendações personalizadas como materiais extras, cronogramas adaptados e formas de aprendizado alinhadas ao estilo de cada estudante. Queremos simplificar o caminho para o sucesso, ajudando nossos usuários a aprender de forma mais eficiente, produtiva e motivadora.
+                <br>
+                Estamos comprometidos em construir um futuro onde a educação seja mais acessível, inteligente e centrada no indivíduo. Conte conosco para revolucionar sua jornada acadêmica!!</a>
             <br><br>
             <a class = "footer_text">Estamos Trabalhando Por Você!</a>
         </div>
     </div>
 
     <div class = "bloco2">
-        <p><a class = "text2"><span>M</span>étis é um projeto criado para ajudar a população, entre as mais perigosas e mais seguras áreas. Aqui, você pode estar verificando as áreas atuais com mais crime perto de sua casa, protegendo você e seus familiares, a se sentirem seguros ao sair nas ruas novamente.</a> 
+        <p><a class = "text2"><span>C</span>ombinando tecnologia avançada e expertise educacional, criamos um sistema inovador que vai além da simples análise de desempenho.</a> 
     </div>
 
 </section>
@@ -78,7 +80,7 @@
         </div>
         <li>
             <div class = "tituloCeap" >
-                <a href="https://ceappedreira.org.br/" target="_blank"> CEAP </a>
+                <a href="./suporte.html" target="_blank"> Suporte </a>
             </div>  
         </li>
     </ul>
