--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <nav>
-        <a class="logo" href="./metis.html"> métis </a>
+        <a class="logo" href="./metis.html"> The Way </a>
 
                <div class="images" href="/">
                     <ul class = "nav-list">
@@ -20,9 +20,7 @@
                         </li>
                     </ul>
                 </div>
-    </nav>
-
-
+    </nav> 
 <main>
 <body>
     <div id = "container">
@@ -40,11 +38,7 @@
                         <br><br>
                 <a href = "registrar.html" target="blank">Não tem cadastro? <span>Registre-se</span></a>
             </form>
-        </div>
-        
-        <p>
-            Faça login para validarmos sua denuncia, colabore com nossa comunidade!
-        </p>
+        </div> 
     </div>
 </main>
 
