--- a/suporte.html
+++ b/suporte.html
@@ -11,7 +11,7 @@
 
 <header>
     <nav>
-        <a class="logo" href="./metis.html" > Métis </a>
+        <a class="logo" href="./metis.html" > The Way </a>
         <div class="images" href="/">
             <ul class = "nav-list">
                 <li>
@@ -29,18 +29,18 @@
         <div class="figura1">
             <button>
                 <img src="./imgs/apoio-suporte.png" alt="imgSup_sup">
-                <h1>Suporte Técnico</h1>
+                <h1>Suporte Assistencial</h1>
                 <br><br>
-                <a>Ajudas sobre: <br>Sistema, Denuncias e Problemas técnicos em geral</a>
+                <a>Ajudas sobre: <br>Sistema, parcerias, duvidas e geral</a>
             </button>
         </div>
 
         <div class = "figura2">
             <button>
-                <img src="./imgs/friends.png" alt="imgSup_sup">
-                <h1>Fórum Da Comunidade</h1>
+                <img src="./imgs/whatsapp.png" alt="imgSup_sup">
+                <h1>Suporte por Whatsapp</h1>
                 <br>
-                <a>Ajudas sobre: <br>Conta, Login e Problemas dentro do site em geral</a> 
+                <a>Ajudas sobre: <br>Conta, login e reclamações</a> 
             </button>
         </div>
     </div>
@@ -72,7 +72,7 @@
         </div>
         <li>
             <div class = "tituloCeap" >
-                <a href="https://ceappedreira.org.br/" target="_blank"> CEAP </a>
+                <a href="./suporte.html" target="_blank"> Suporte </a>
             </div>  
         </li>
     </ul>
