Inclusão do botão do whatsapp

--- a/metis.html
+++ b/metis.html
@@ -33,7 +33,7 @@
                         </li>
                         <li>
                             <div class = "tituloSuporte">
-                            <a href="./suporte.html" target="blank">Suporte </a>
+                            <a href="" target="blank">Suporte </a>
                             </div>
                         </li>                       
                     </ul>
@@ -79,7 +79,32 @@
             </div> 
         </div>
     </section>
+    
+    <!-- Support Modal -->
+    <div id="modal" class="modal hidden">
+        <div class="modal-content">
+            <span class="close-button" onclick="toggleModal()">&times;</span>
+            <h2>Como podemos ajudar?</h2>
+            <div class="support-options">
+                <button class="support-button">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1067/1067566.png" alt="Support">
+                    <h3>Suporte Assistencial</h3> 
+                </button>
+                <button class="support-button">
+                    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+                    <h3>Suporte por WhatsApp</h3> 
+                </button>
+            </div>
+            <div class="support-hours">
+                <p>Horário de atendimento:</p>
+                <p><strong>Segunda a Sexta, 9h às 18h</strong></p>
+            </div>
+        </div>
+    </div>
 
+    <a href="https://wa.me/5511123456789" target="_blank" rel="noopener noreferrer" class="whatsapp-button">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+    </a>
     
 
 
@@ -109,8 +134,12 @@
                     </li>
                     </div>
                     <li>
-                        <div class = "tituloCeap" >
-                            <a href="./suporte.html" target="_blank"> Suporte </a>
+                        <div class = "tituloSup" >
+                            <a href="./suporte.html" target="_blank"> SAC - 0800-100-020 </a>
+                            <br>
+                            <a href="">WhatsApp</a>
+                            <br>
+                            <a href="./suporte.html" target="_blank">E-mail: tway@gmail.com.br</a>
                         </div>  
                     </li>
                 </ul>
