alterações pré TCC

--- a/front/login.html
+++ b/front/login.html
@@ -28,17 +28,17 @@
             <form action="">
                 <a class="text_login">Login</a>
                 <br><br>
-                <input type="number" placeholder="  CPF" max="9" id="lbCPF" name="cpf">
+                <input type="number" placeholder="  CPF" maxlength="11" id="lbCPF" name="cpf">
                 <br><br>
-                <input type="password" name="senha" placeholder="  Senha">
+                <input type="password" name="senha" placeholder="  Senha" id = "lbsenha">
                 <br><br>
-                <input class="btEnviar_login" type="button" value="Entrar" id="btLogin">
+                <input href="areadoestudante.html" class="btEnviar_login" type="button" value="Entrar" id="btLogin"> 
                 <br><br>
                 <a href="registrar.html" target="_blank">Não tem cadastro? <span>Registre-se</span></a>
             </form>
         </div>
     </div>
-</main>
+</main> 
 <footer></footer>
 <script src="./scripts/login.js"></script>
 </body>
