--- a/front/registrar.html
+++ b/front/registrar.html
@@ -34,7 +34,7 @@
                     <input type="text" placeholder="Apelido" id="lbuser" name="username" required>
                     <input type="password" placeholder="Senha" id="lbsenha" name="password" required>
                     <input type="password" placeholder="Confirme sua senha" id="confirmSenha" name="confirmPassword" required>
-                    <button class="btEnviar" type="submit">Cadastrar</button>
+                    <button class="btEnviar" type="submit" onclick="cadastrar()">Cadastrar</button>
                     <p class="login-link">
                         Já possui uma conta? <a class="a_login" href="./login.html">Entre aqui</a>
                     </p>
