--- a/front/suporte.html
+++ b/front/suporte.html
@@ -14,24 +14,24 @@
         <a class="logo" href="./metis.html">The Way</a>
     </nav>
 </header>
-<main>
-<div id="cont_sup">
-    <div class="figura1">
-        <button id="btnAssistencial">
-            <img src="./imgs/apoio-suporte.png" alt="imgSup_sup">
-            <h1>Suporte Assistencial</h1>
-            <a>Ajudas sobre: <br>Sistema, parcerias, dúvidas e geral</a>
-        </button>
-    </div>
+<main id = "content">
+    <div id="cont_sup">
+        <div class="figura1">
+            <button id="btnAssistencial">
+                <img src="./imgs/apoio-suporte.png" alt="imgSup_sup">
+                <h1>Suporte Assistencial</h1>
+                <a>Ajudas sobre: <br>Sistema, parcerias, dúvidas e geral</a>
+            </button>
+        </div>
 
-    <div class="figura2">
-        <button id="btnWhatsApp">
-            <img src="./imgs/whatsapp.png" alt="imgSup_sup">
-            <h1>Suporte por WhatsApp</h1>
-            <a>Ajudas sobre: <br>Conta, login e reclamações</a> 
-        </button>
+        <div class="figura2">
+            <button id="btnWhatsApp">
+                <img src="./imgs/whatsapp.png" alt="imgSup_sup">
+                <h1>Suporte por WhatsApp</h1>
+                <a>Ajudas sobre: <br>Conta, login e reclamações</a> 
+            </button>
+        </div>
     </div>
-</div>
 </main>
 
 <div id="modal" class="hidden">
